@@ -228,7 +228,7 @@ Job *       job_copy                  (const void *parent, const Job *old_job)
 Job *       job_find_by_name          (const char *name);
 Job *       job_find_by_pid           (pid_t pid, ProcessType *process);
 
-void        job_change_goal           (Job *job, JobGoal goal,
+Job *       job_change_goal           (Job *job, JobGoal goal,
 				       EventEmission *emission);
 
 void        job_change_state          (Job *job, JobState state);
